--- a/CarWashFrontend/CarWashFrontend.csproj
+++ b/CarWashFrontend/CarWashFrontend.csproj
@@ -191,10 +191,12 @@
     <Content Include="Views\Car\CarDetails.cshtml" />
     <Content Include="Views\Car\Edit.cshtml" />
     <Content Include="Views\Car\Delete.cshtml" />
-    <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\Package\Create.cshtml" />
-    <Content Include="Views\Car\Create.cshtml" />
     <Content Include="Views\Login\AdminPage.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Login\IncorrectPass.cshtml" />
+    <Content Include="Views\Car\CreateCar.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
